--- a/Pandas/Pandas+Notebook+I.ipynb
+++ b/Pandas/Pandas+Notebook+I.ipynb
@@ -22,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pandas, pd is an alias\n"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -41,9 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2\n",
+      "1    4\n",
+      "2    5\n",
+      "3    6\n",
+      "4    9\n",
+      "dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a numeric pandas series\n",
     "s = pd.Series([2, 4, 5, 6, 9])\n",
@@ -53,9 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.datetimes.DatetimeIndex"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# creating a series of type datetime\n",
     "date_series = pd.date_range(start = '11-09-2017', end = '12-12-2017')\n",
@@ -102,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +136,106 @@
     "cars_dict = {\"cars_per_cap\" : cars_per_cap, \"country\" : country, \"drives_right\" : drives_right }\n",
     "\n",
     "# Create the dataframe 'cars'\n",
-    "cars = "
+    "cars = pd.DataFrame(cars_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cars_per_cap</th>\n",
+       "      <th>country</th>\n",
+       "      <th>drives_right</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>809</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>731</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>588</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
+       "      <td>India</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>200</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>70</td>\n",
+       "      <td>Morocco</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cars_per_cap        country  drives_right\n",
+       "0           809  United States         False\n",
+       "1           731      Australia          True\n",
+       "2           588          Japan          True\n",
+       "3            18          India          True\n",
+       "4           200         Russia         False\n",
+       "5            70        Morocco         False\n",
+       "6            45          Egypt         False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print the created dataframe\n"
+    "# print the created dataframe\n",
+    "cars"
    ]
   },
   {
@@ -375,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
